DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.17
Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
			an exception.
                        NEW VERSION: 1.1.16
Aug-04-2006 dshipton    Flagpoll now used in the build...and simplifications.
                        NEW VERSION: 1.1.15
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the Gadgeteer library.
                        NEW VERSION: 1.1.14
Jun-25-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 1.1.13
May-24-2006 patrick     Changed the names of the versioned header and data
                        directories to use the pre-1.1.10 naming convention
                        (gadgeteer-<version> instead of gadget-<version>).
                        NEW VERSION: 1.1.12
May-24-2006 patrick     Added gadget::getDefaultPluginRoot(), which provides
                        a version-specific path to the directory containing
                        the base set of Gadgeteer plug-ins.
                        NEW VERSION: 1.1.11
May-23-2006 dshipton    Added version information to data directory.
                        NEW VERSION: 1.1.10
May-23-2006 dshipton    Changed the static and shared library names to include
                        the version as part of the base library name.
                        NEW VERSION: 1.1.9
May-12-2005 patrick     Updated to VPR 1.1.20 and removed all exception
                        specifications except those that are required by a
                        base class.
                        NEW VERSION: 1.1.8
Feb-15-2006 patrickh    Updated to VPR 1.1.16.