@@ -46,6 +46,7 @@
 #include <gadget/Type/Input.h>
 #include <gadget/Type/Position.h>
 #include <gadget/Type/Digital.h>
+#include <gadget/Type/Analog.h>
 #include <gadget/Type/InputMixer.h>
 
 #include <gmtl/Matrix.h>
@@ -55,6 +56,7 @@
 
 #include <vrpn_Tracker.h>
 #include <vrpn_Button.h>
+#include <vrpn_Analog.h>
 
 #if ! defined(VRPN_CALLBACK)
 #  define VRPN_CALLBACK
@@ -75,9 +77,10 @@ namespace gadget
  *
  * @see gadget::Digital, gadget::Analog, gadget::Position
  */
-class Vrpn : public InputMixer<InputMixer<Input,Digital>,Position>
+class Vrpn
+   : public InputMixer<InputMixer<InputMixer<Input, Analog>, Digital>,
+                       Position>
 {
-
 public:
 
    /** Constructor. */
@@ -150,11 +153,14 @@ protected:
 private:
    std::string mTrackerServer;
    std::string mButtonServer;
+   std::string mAnalogServer;
    int mTrackerNumber;
    int mButtonNumber;
+   int mAnalogNumber;
 
    void handleTracker(const vrpn_TRACKERCB& t);
    void handleButton(const vrpn_BUTTONCB& b);
+   void handleAnalog(const vrpn_ANALOGCB& b);
 
    void readLoop();
 
@@ -162,13 +168,16 @@ private:
 
    gmtl::Matrix44f getSensorPos(const unsigned int i);
    gadget::DigitalData getDigitalData(const unsigned int i);
+   gadget::AnalogData getAnalogData(const unsigned int i);
 
    std::vector<gadget::DigitalData> mButtons;
+   std::vector<gadget::AnalogData> mAnalogs;
    std::vector<gmtl::Quatf> mQuats;
    std::vector<gmtl::Vec3f> mPositions;
 
    friend void VRPN_CALLBACK staticHandleTracker(void*, vrpn_TRACKERCB);
    friend void VRPN_CALLBACK staticHandleButton(void*, vrpn_BUTTONCB);
+   friend void VRPN_CALLBACK staticHandleAnalog(void*, vrpn_ANALOGCB);
 };
 
 } // End of gadget namespace
