@@ -1,5 +1,6 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-07-2006 patrick     Added analog support to the VRPN driver.
 Oct-01-2006 patrick     Updated for VPR 1.1.35.
                         NEW VERSION: 1.1.17
 Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
